--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start:app": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node server/server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
